# py-relations

./: README.md  setup.cfg
src/: __init__.py
src/collection/: index.py
src/join/: pairing.py
src/relations/: generic.py
