[metadata]
name = relations-andremeira
version = 0.0.1-dev
author = André Meira
author_email = a.meira92@gmail.com
description = A package about defining relations in between objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndreMeira/py-relations
project_urls =
    Bug Tracker = https://github.com/AndreMeira/py-relations
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
